--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,98 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/list"
     android:background="#ffffff"
-    android:orientation="horizontal">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <Button
-            android:id="@+id/btnTime"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#ff0000"
-            android:text="时间" />
-
-        <Button
-            android:id="@+id/btnSms"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#ff00ff"
-            android:text="短消息" />
-
-        <Button
-            android:id="@+id/btnDateTime"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#00ffff"
-            android:text="日期时间" />
-
-        <Button
-            android:id="@+id/btnWeather"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#ff0000"
-            android:text="北京天气" />
-        <Button
-            android:id="@+id/btnSensor2"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#00ffff"
-            android:text="方向传感器-水平仪" />
-
-        <Button
-            android:id="@+id/btnLed"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#00ffff"
-            android:text="光线传感器-旋转LED" />
-
-        <Button
-            android:id="@+id/btnSensor"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#00ffff"
-            android:text="方向传感器-指南针" />
-
-
-
-        <Button
-            android:id="@+id/btnlight"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#00ffff"
-            android:text="光线/距离传感器-测量时间" />
-
-        <Button
-            android:id="@+id/btnbus2"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#00ffff"
-            android:text="428公交线路-天通北苑" />
-
-        <Button
-            android:id="@+id/btnbus"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:background="#00ffff"
-            android:text="428公交线路-龙泽地铁" />
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
-
+    android:orientation="horizontal"/>
