--- a/app/src/main/res/layout/activity_lcd1602.xml
+++ b/app/src/main/res/layout/activity_lcd1602.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical">
 
     <com.supets.pet.lcd.LCD1602A
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
         android:id="@+id/lcd1602"
+        android:layout_width="wrap_content"
+        android:layout_height="96dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:background="#AFEEEE"
-        app:textColor="#000000"
-        android:layout_width="384dp"
-        android:layout_height="96dp" />
+        app:textColor="#000000" />
 
 </LinearLayout>
 
