--- a/app/src/main/res/layout/activity_lcd1602.xml
+++ b/app/src/main/res/layout/activity_lcd1602.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff000000"
+    android:background="@mipmap/lcd1602bac"
     android:orientation="vertical">
 
     <com.supets.pet.lcd.LCD1602A
         android:id="@+id/lcd1602"
-        android:layout_width="wrap_content"
+        android:layout_width="384dp"
         android:layout_height="96dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
