--- a/app/src/main/res/layout/activity_lcd1602.xml
+++ b/app/src/main/res/layout/activity_lcd1602.xml
@@ -10,10 +10,114 @@
         android:id="@+id/lcd1602"
         android:layout_width="384dp"
         android:layout_height="96dp"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:background="#AFEEEE"
+        android:background="#9FB6CD"
         app:textColor="#000000" />
+
+    <TableLayout
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="30dp">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="1"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="2"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="3"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="1"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="2"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="3"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+        </TableRow>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="1"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="2"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="#9AC0CD"
+                android:text="3"
+                android:textColor="#ff0000"
+                android:textSize="13sp" />
+        </TableRow>
+    </TableLayout>
 
 </LinearLayout>
 
