--- a/app/src/main/res/layout/activity_lcd1602.xml
+++ b/app/src/main/res/layout/activity_lcd1602.xml
@@ -15,109 +15,172 @@
         android:background="#9FB6CD"
         app:textColor="#000000" />
 
-    <TableLayout
-        android:gravity="center_vertical"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="30dp">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        <TableLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="30dp"
+            android:layout_weight="2"
+            android:gravity="center_vertical">
 
-            <Button
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="背光调节+"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="背光调节-"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="开显示"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="关显示"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="清屏"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="打开光标"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="关闭光标"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="显存大小"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="屏幕大小"
+                    android:textColor="#ff0000"
+                    android:textSize="13sp" />
+            </TableRow>
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="30dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical">
+
+            <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="1"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
+                android:orientation="vertical">
 
-            <Button
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="温度"
+                    android:textColor="#000000"
+                    android:textSize="13sp" />
+            </TableRow>
+
+            <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="2"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
+                android:orientation="vertical">
 
-            <Button
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="时间"
+                    android:textColor="#000000"
+                    android:textSize="13sp" />
+            </TableRow>
+
+            <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="3"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+                android:orientation="vertical">
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="1"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:background="#9AC0CD"
+                    android:text="日期"
+                    android:textColor="#000000"
+                    android:textSize="13sp" />
+            </TableRow>
+        </TableLayout>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="2"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="3"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
-        </TableRow>
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="1"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="2"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:background="#9AC0CD"
-                android:text="3"
-                android:textColor="#ff0000"
-                android:textSize="13sp" />
-        </TableRow>
-    </TableLayout>
+    </LinearLayout>
 
 </LinearLayout>
 
