--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -3,15 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:gravity="center"
-        android:background="#00FFFF"
-        android:textSize="24sp"
-        />
-
+        android:layout_marginBottom="10dp"
+        android:background="#E6E6FA"
+        android:gravity="left"
+        android:textSize="24sp" />
 </LinearLayout>
