--- a/app/src/main/res/layout/activity_lcd1602.xml
+++ b/app/src/main/res/layout/activity_lcd1602.xml
@@ -12,8 +12,8 @@
         android:layout_height="96dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:background="#9FB6CD"
-        app:textColor="#000000" />
+        android:background="@color/bcd_backcolor"
+        app:textColor="@color/bcd_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
