--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff000000"
+    android:background="#000"
     android:orientation="vertical">
 
     <com.supets.pet.view.LedTextView
         android:id="@+id/time_led"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:scroll="false"
         app:dotcolormode="1"
-        app:textColor="#ffffff" />
+        app:scroll="false"
+        app:textColor="#fff" />
 
 </LinearLayout>
 
