--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="bcd_backcolor">#b9bda6</color>
     <color name="bcd_color">#423e55</color>
+    <color name="red">#ff0000</color>
 </resources>
