--- a/app/src/main/res/layout-hdpi/activity_bcd.xml
+++ b/app/src/main/res/layout-hdpi/activity_bcd.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:padding="10dp"
-    android:background="#000"
+    android:background="@mipmap/bcd"
     android:orientation="vertical">
 
     <com.supets.pet.bcd.MyView2
